--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-router": "^1.0.0-rc3"
+    "react-router": "^1.0.0-rc3",
+    "express-react-views": "^0.9.0"
   }
 }
