--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
-    "express-react-views": "^0.9.0"
+    "express-react-views": "^0.9.0",
+    "request": "^2.65.0"
   }
 }
