--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,28 +4,30 @@ apply plugin: 'spring-boot'
 buildscript {
     repositories {
         mavenCentral()
-        maven { url "http://repo.spring.io/snapshot" }
+        maven { url "http://repo.spring.io/release" }
         maven { url "http://repo.spring.io/milestone" }
     }
 
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.7.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RC1")
     }
 }
 
 repositories {
     mavenCentral()
-    maven { url "http://repo.spring.io/snapshot" }
+    maven { url "http://repo.spring.io/release" }
     maven { url "http://repo.spring.io/milestone" }
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-cache")
+
+    compile("net.sf.ehcache:ehcache")
 
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
