--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,15 @@
     "start": "nodejs server.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-router": "^1.0.0-rc3",
-    "express-react-views": "^0.9.0",
-    "request": "^2.65.0"
+    "express": "^4.13.4",
+    "express-react-views": "^0.10.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-router": "^2.4.0",
+    "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "~6.9.0",
+    "babel-preset-react": "^6.5.0"
   }
 }
