--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,28 @@
   "description": "Demo App",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodejs server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "webpack-dev-server --port 3000 --inline --content-base public/ --history-api-fallback",
+    "start:prod": "npm run build && node packed-server-bundle.js",
+    "build:client": "webpack",
+    "build:server": "webpack --config webpack.server.config.js",
+    "build": "npm run build:client && npm run build:server"
   },
   "dependencies": {
+    "compression": "^1.6.1",
     "express": "^4.13.4",
-    "express-react-views": "^0.10.1",
+    "if-env": "^1.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0",
-    "request": "^2.72.0"
+    "react-router": "^2.4.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "~6.9.0",
-    "babel-preset-react": "^6.5.0"
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "http-server": "^0.8.5",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
