--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
     "build": "npm run build:client && npm run build:server"
   },
   "dependencies": {
+    "axios": "^0.12.0",
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "if-env": "^1.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
